# OpenMowerMeta

./: .pre-commit-config.yaml  ContainerManager.py  ContainerManagerBase.py  Dockerfile  MetaContainerManager.py  main.py  pyproject.toml
.github/workflows/: build-container.yaml  build_image.yaml
api-definition/: openapi.yaml
backend/: Dockerfile  pom.xml
backend/src/main/resources/: api.openmower.de.openapi.yaml  application.properties  openapi.yaml
backend/src/main/resources/assets/: open_mower.default.schema.json
frontend/: .gitignore  openapi.yaml  package-lock.json  package.json  tsconfig.json
frontend/.storybook/: preview.tsx
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  theme.tsx
frontend/src/components/components/: ContainerControlButton.tsx  ContainerStatusCard.tsx  ContainerStatusKeyValueCardItem.tsx  InfoCard.tsx  KeyValueCard.tsx  KeyValueCardItem.tsx
frontend/src/components/components/stories/: ContainerControlButton.stories.tsx  ContainerStatusCard.stories.tsx  InfoCard.stories.tsx  KeyValueCard.stories.tsx
frontend/src/components/drawer/: Drawer.tsx  DrawerContent.tsx  DrawerItem.tsx
frontend/src/components/drawer/stories/: Drawer.stories.tsx  DrawerContent.stories.tsx  DrawerItem.stories.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/datatypes/: ContainerExecutionState.tsx
frontend/src/pages/: ErrorPage.tsx
frontend/src/pages/app/: MetaContainerConfiguration.tsx  OpenMowerConfiguration.tsx
frontend/src/stores/: metaContainerStore.ts  openMowerContainerStore.ts
(+12 files in other folders)
